--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     
                 </div>
 
-                    <div class="wrap-screen-bottom-stat">
+                    <div class="wrap-screen-bottom-stat" id="container-all-upgrade">
 
-                        <div class="upgrade-current">Current Upgrade</div>
+                        <div class="upgrade-current" id="header-upgrade">Current Upgrade</div>
                     
-                        <div class="wrap-skill">
+                        <div class="wrap-skill" id="container-upgrade">
 
                             <div class="upgrade-skill">SKL</div>
                             <div class="upgrade-skill">SKL</div>
